applications/apps/jira/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jira
  namespace: jira
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jira.${ARGOCD_ENV_DOMAIN_NET}`)
      kind: Rule
      services:
        - name: jira
          port: 8080
  tls: {}
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: confluence-sync
#   namespace: confluence
#   annotations:
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`conf.${ARGOCD_ENV_DOMAIN_NET}`) && PathPrefix(`/synchrony/`)
#       kind: Rule
#       services:
#         - name: confluence-synchrony
#           port: 8091
#   tls: {}
